--- a/dhcpd.conf
+++ b/dhcpd.conf
@@ -26,7 +26,7 @@ host okd4-control-plane-1 {
 }
 
 host okd4-control-plane-2 {
- hardware ethernet 0F:E1:66:BF:53:68;
+ hardware ethernet 66:AE:28:1E:80:DE;
  fixed-address 10.10.10.202;
 }
 
@@ -41,6 +41,6 @@ host okd4-compute-1 {
 }
 
 host okd4-compute-2 {
- hardware ethernet 65:BB:C9:C4:3B:74;
+ hardware ethernet BE:C5:A1:B0:75:E9;
  fixed-address 10.10.10.205;
 }
